<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LedControl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_led_control"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

       <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deconnexion"
        android:id="@+id/button4"
        android:background="@drawable/button_flatred"
        android:textColor="#ffececec"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/controller"
        android:columnCount="3"
        android:rowCount="3"
        android:clickable="false"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:useDefaultMargins="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/lup"
            android:id="@+id/lup"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/up"
            android:id="@+id/up"
            android:layout_row="0"
            android:layout_column="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/rup"
            android:id="@+id/rup"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/left"
            android:id="@+id/left"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stop"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/button_flatred"
            android:textColor="#ffececec" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/right"
            android:id="@+id/right"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/lown"
            android:id="@+id/lown"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/down"
            android:id="@+id/down"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:textColor="#ffececec"
            android:text="@string/rown"
            android:id="@+id/rown"
            android:layout_row="2"
            android:layout_column="2" />
    </GridLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Système Sade"
        android:id="@+id/Switcher1"
        android:checked="false"
        android:clickable="false"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/sans"
        android:layout_toEndOf="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/controller"
        android:layout_below="@+id/textView2"
        android:contentDescription="@string/about" />

</RelativeLayout>
